--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
             <ul class="ud-hero-buttons">
               <li>
-                <a href="https://github.com/devhau/startup-template" rel="nofollow noopener" target="_blank"
+                <a href="https://github.com/devhu/startup-template" rel="nofollow noopener" target="_blank"
                   class="ud-main-btn ud-white-btn">
                   Download Now
                 </a>
@@ -176,11 +176,7 @@
         <div class="col-lg-12">
           <div class="ud-section-title">
             <span>Features</span>
-            <h3 class="ud-feature-title">Cloud-Native Systems</h3>
-            <p class="ud-feature-desc">
-              Secure deployment and orchestration on AWS and Azure with Kubernetes, DevOps automation and serverless
-              infrastructure.
-            </p>
+           
 
           </div>
         </div>
@@ -238,7 +234,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-3 col-lg-3 col-sm-6">
+        <!-- <div class="col-xl-3 col-lg-3 col-sm-6">
           <div class="ud-single-feature wow fadeInUp" data-wow-delay=".25s">
             <div class="ud-feature-icon">
               <i class="lni lni-layers"></i>
@@ -253,7 +249,7 @@
               </a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
