did content adjustment 1

--- a/index.html
+++ b/index.html
@@ -1028,13 +1028,13 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <p class="ud-footer-bottom-right">
               Designed and Developed by
               <a href="https://hau.xyz" rel="nofollow">haudev</a><a href="https://invofree.com">Free Invoice
                 Generator</a>
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
