did content adjustment 1

--- a/index.html
+++ b/index.html
@@ -839,11 +839,11 @@
               </div>
               <div class="ud-form-group">
                 <label for="email">Email*</label>
-                <input type="email" name="email" placeholder="example@yourmail.com" />
+                <input type="email" name="email" placeholder="adam@gmail.com" />
               </div>
               <div class="ud-form-group">
                 <label for="phone">Phone*</label>
-                <input type="text" name="phone" placeholder="+885 1254 5211 552" />
+                <input type="text" name="phone" placeholder="+91 933 554 2827" />
               </div>
               <div class="ud-form-group">
                 <label for="message">Message*</label>
