--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
               <a href="login.html" class="ud-main-btn ud-login-btn">
                 Sign In
               </a>
-              <a class="ud-main-btn ud-white-btn" href="javascript:void(0)">
+              <!-- <a class="ud-main-btn ud-white-btn" href="javascript:void(0)">
                 Sign Up
-              </a>
+              </a> -->
             </div>
           </nav>
         </div>
