did major content v2 with cursor on pages other than index

--- a/blog-details.html
+++ b/blog-details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play | Open source Project by UIdeck</title>
+    <title>NexusBuilder | Blog Details</title>
 
     <!--====== Favicon Icon ======-->
     <link
@@ -27,7 +27,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -115,7 +115,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-banner-content">
-              <h1>Blog Page</h1>
+              <h1>NexusBuilder Insights</h1>
             </div>
           </div>
         </div>
@@ -161,61 +161,47 @@
           <div class="col-lg-8">
             <div class="ud-blog-details-content">
               <h2 class="ud-blog-details-title">
-                Facing a challenge is kind of a turn-on for an easy rider
+                Designing cloud-native architectures that actually scale
               </h2>
               <p class="ud-blog-details-para">
-                There’s a time and place for everything… including asking for
-                reviews. For instance: you should not asking for a review on
-                your checkout page. The sole purpose of this page is to guide
-                your customer to complete their purchase, and this means that
-                the page should be as minimalist and pared-down possible. You
-                don’t want to have any unnecessary elements or Call To Actions.
+                Moving from a working prototype to a resilient, cloud-native platform is less about adding more servers
+                and more about making better design decisions. At NexusBuilder we start with clear boundaries between
+                domains, opinionated API contracts, and a deployment model that assumes things will fail and need to
+                recover quickly.
               </p>
               <p class="ud-blog-details-para">
-                There’s a time and place for everything… including asking for
-                reviews. For instance: you should not asking for a review on
-                your checkout page. The sole purpose of this page is to guide
-                your customer to complete their purchase, and this means that
-                the page should be as minimalist and pared-down possible. You
-                don’t want to have any unnecessary elements or Call To Actions.
+                Instead of jumping straight into microservices, we focus on a modular architecture, strong observability,
+                and automation-friendly workflows. This gives teams a stable foundation to experiment on, while keeping
+                performance, reliability, and cost predictable as usage grows.
               </p>
-              <h3 class="ud-blog-details-subtitle">Sea no quidam vulputate</h3>
+              <h3 class="ud-blog-details-subtitle">What cloud-native really means in practice</h3>
               <p class="ud-blog-details-para">
-                At quo cetero fastidii. Usu ex ornatus corpora sententiae,
-                vocibus deleniti ut nec. Ut enim eripuit eligendi est, in
-                iracundia signiferumque quo. Sed virtute suavitate suscipiantur
-                ea, dolor this can eloquentiam ei pro. Suas adversarium
-                interpretaris eu sit, eum viris impedit ne. Erant appareat
-                corrumpit ei vel.
+                For us, “cloud-native” means your system is built to embrace the strengths of the cloud, not just hosted
+                on it. Services are stateless where possible, state is managed through well-chosen data stores, and
+                infrastructure is described as code so environments are reproducible and reviewable like any other
+                change.
               </p>
 
               <div class="ud-blog-quote">
                 <i class="lni lni-quotation"></i>
                 <p>
-                  A spring of truth shall flow from it: like a new star it shall
-                  scatter the darkness of ignorance, and cause a light
-                  heretofore unknown to shine amongst men.
+                  Great architecture is less about guessing the future and more about making it safe and cheap to adapt
+                  when the future changes.
                 </p>
-                <h6>“Andrio Domeco”</h6>
+                <h6>“NexusBuilder Engineering Playbook”</h6>
               </div>
               <h3 class="ud-blog-details-subtitle">
-                What is it with your ideas?
+                Evolving legacy systems without a big-bang rewrite
               </h3>
               <p class="ud-blog-details-para">
-                At quo cetero fastidii. Usu ex ornatus corpora sententiae,
-                vocibus deleniti ut nec. Ut enim eripuit eligendi est, in
-                iracundia signiferumque quo. Sed virtute suavitate suscipiantur
-                ea, dolor this can eloquentiam ei pro. Suas adversarium
-                interpretaris eu sit, eum viris impedit ne. Erant appareat
-                corrumpit ei vel.
+                Most teams don’t have the luxury of starting from scratch. We use techniques like the strangler fig
+                pattern, anti-corruption layers, and parallel run strategies to incrementally carve new, cloud-ready
+                modules out of existing monoliths—while keeping core business flows stable.
               </p>
               <p class="ud-blog-details-para">
-                At quo cetero fastidii. Usu ex ornatus corpora sententiae,
-                vocibus deleniti ut nec. Ut enim eripuit eligendi est, in
-                iracundia signiferumque quo. Sed virtute suavitate suscipiantur
-                ea, dolor this can eloquentiam ei pro. Suas adversarium
-                interpretaris eu sit, eum viris impedit ne. Erant appareat
-                corrumpit ei vel.
+                The result is a steady, low-drama evolution instead of a risky, all-or-nothing migration. Along the way
+                we invest in mentoring your engineers, so they understand not just what we changed, but why those
+                decisions set the platform up for the next phase of growth.
               </p>
 
               <div class="ud-blog-details-action">
@@ -292,10 +278,10 @@
                     <div class="ud-article-content">
                       <h5 class="ud-article-title">
                         <a href="javascript:void(0)">
-                          The 8 best landing page builders, reviewed
+                          Observability-first engineering for modern platforms
                         </a>
                       </h5>
-                      <p class="ud-article-author">Martin Fedous</p>
+                      <p class="ud-article-author">NexusBuilder Web Core Unit</p>
                     </div>
                   </li>
                   <li>
@@ -308,10 +294,10 @@
                     <div class="ud-article-content">
                       <h5 class="ud-article-title">
                         <a href="javascript:void(0)">
-                          Create engaging online courses your student…
+                          Embedding AI into existing products safely
                         </a>
                       </h5>
-                      <p class="ud-article-author">Glomiya Lucy</p>
+                      <p class="ud-article-author">AI Innovation Lab</p>
                     </div>
                   </li>
                   <li>
@@ -324,10 +310,10 @@
                     <div class="ud-article-content">
                       <h5 class="ud-article-title">
                         <a href="javascript:void(0)">
-                          The ultimate formula for launching online course
+                          Migrating from monolith to services without downtime
                         </a>
                       </h5>
-                      <p class="ud-article-author">Andrio jeson</p>
+                      <p class="ud-article-author">Cloud Architecture Unit</p>
                     </div>
                   </li>
                   <li>
@@ -340,10 +326,10 @@
                     <div class="ud-article-content">
                       <h5 class="ud-article-title">
                         <a href="javascript:void(0)">
-                          50 Best web design tips & tricks that will help you
+                          Mentoring engineers through real-world production work
                         </a>
                       </h5>
-                      <p class="ud-article-author">Samoyel Dayno</p>
+                      <p class="ud-article-author">Mentorship Division</p>
                     </div>
                   </li>
                 </ul>
@@ -381,15 +367,15 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Jan 05, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    Meet AutoManage, the best AI management tools
+                    Designing cloud-native architectures that actually scale
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  How we approach modular services, observability, and resilience when taking products from MVP to
+                  production-grade platforms.
                 </p>
               </div>
             </div>
@@ -402,15 +388,15 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Jan 12, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    How to earn more money as a wellness coach
+                    Embedding AI into existing products without breaking them
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  Practical patterns for integrating LLMs and automation into live systems while preserving reliability
+                  and user trust.
                 </p>
               </div>
             </div>
@@ -423,15 +409,15 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Feb 02, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    The no-fuss guide to upselling and cross selling
+                    Choosing the right architecture for your next product
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  Monolith, modular monolith, or microservices? We break down how we decide what fits each stage of a
+                  product’s journey.
                 </p>
               </div>
             </div>
@@ -458,11 +444,11 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
                 <a href="index.html" class="ud-footer-logo">
-                  <span class="fw-bold text-white startup-logo">Startup Template</span>
+                  <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
                 </a>
                 <p class="ud-widget-desc">
-                  We create digital experiences for brands and companies by
-                  using technology.
+                  NexusBuilder engineers scalable digital systems and cultivates the next generation of technology
+                  leaders through applied innovation and real-world mentorship.
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
