--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play | Open source Project by UIdeck</title>
+    <title>NexusBuilder | Blog</title>
 
     <!--====== Favicon Icon ======-->
     <link
@@ -27,7 +27,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -115,7 +115,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-banner-content">
-              <h1>Blog Page</h1>
+              <h1>NexusBuilder Insights</h1>
             </div>
           </div>
         </div>
@@ -135,15 +135,15 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Jan 05, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    Meet AutoManage, the best AI management tools
+                    Designing cloud-native architectures that actually scale
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  How we approach modular services, observability, and resilience when taking products from MVP to
+                  production-grade platforms.
                 </p>
               </div>
             </div>
@@ -156,15 +156,15 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Jan 12, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    How to earn more money as a wellness coach
+                    Embedding AI into existing products without breaking them
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  Practical patterns for integrating LLMs and automation into live systems while preserving reliability
+                  and user trust.
                 </p>
               </div>
             </div>
@@ -177,15 +177,15 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Jan 20, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    The no-fuss guide to upselling and cross selling
+                    Mentoring engineers through real-world production systems
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  Why we pair mentorship with live projects to teach architecture, debugging, and decision-making at
+                  scale.
                 </p>
               </div>
             </div>
@@ -198,15 +198,14 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Jan 27, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    How to earn more money as a wellness coach
+                    Observability-first engineering: logs, metrics, and traces
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  A practical guide to instrumenting your stack so issues surface before customers notice them.
                 </p>
               </div>
             </div>
@@ -219,15 +218,15 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Feb 02, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    The no-fuss guide to upselling and cross selling
+                    Choosing the right architecture for your next product
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  Monolith, modular monolith, or microservices? We break down how we decide what fits each stage of a
+                  product’s journey.
                 </p>
               </div>
             </div>
@@ -240,15 +239,14 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Feb 09, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    Meet AutoManage, the best AI management tools
+                    From legacy monolith to modern services: a migration playbook
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  Lessons learned from incrementally modernizing critical systems without a risky “big bang” rewrite.
                 </p>
               </div>
             </div>
@@ -261,15 +259,14 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Feb 16, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    Meet AutoManage, the best AI management tools
+                    Running effective engineering sprints with clear outcomes
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  How we structure discovery, delivery, and retros so every sprint creates measurable product impact.
                 </p>
               </div>
             </div>
@@ -282,15 +279,15 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Feb 23, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    How to earn more money as a wellness coach
+                    Scaling frontends for fast, reliable user experiences
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  Performance patterns we use in React-based products to keep interfaces fast as features and traffic
+                  grow.
                 </p>
               </div>
             </div>
@@ -303,15 +300,14 @@
                 </a>
               </div>
               <div class="ud-blog-content">
-                <span class="ud-blog-date">Dec 22, 2023</span>
+                <span class="ud-blog-date">Mar 01, 2026</span>
                 <h3 class="ud-blog-title">
                   <a href="blog-details.html">
-                    The no-fuss guide to upselling and cross selling
+                    Technical leadership for high-scale engineering teams
                   </a>
                 </h3>
                 <p class="ud-blog-desc">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  Principles our leaders use to align architecture, delivery, and mentorship across complex initiatives.
                 </p>
               </div>
             </div>
@@ -338,11 +334,11 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
                 <a href="index.html" class="ud-footer-logo">
-                  <span class="fw-bold text-white startup-logo">Startup Template</span>
+                  <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
                 </a>
                 <p class="ud-widget-desc">
-                  We create digital experiences for brands and companies by
-                  using technology.
+                  NexusBuilder engineers scalable digital systems and cultivates the next generation of technology
+                  leaders through applied innovation and real-world mentorship.
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
