--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play | Open source Project by UIdeck</title>
+    <title>NexusBuilder | Engagement & Pricing</title>
 
     <!--====== Favicon Icon ======-->
     <link
@@ -27,7 +27,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -130,11 +130,11 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-section-title mx-auto text-center">
-              <span>Pricing</span>
-              <h2>Our Pricing Plans</h2>
+              <span>Engagement Models</span>
+              <h2>How We Partner With You</h2>
               <p>
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+                Flexible collaboration options for startups and enterprises—whether you need a focused build sprint, a
+                dedicated engineering pod, or a long-term platform partner.
               </p>
             </div>
           </div>
@@ -147,17 +147,17 @@
               data-wow-delay=".15s"
             >
               <div class="ud-pricing-header">
-                <h3>STARTING FROM</h3>
-                <h4>$ 19.99/mo</h4>
+                <h3>PROJECT SPRINT</h3>
+                <h4>From $ 19.99/mo</h4>
               </div>
               <div class="ud-pricing-body">
                 <ul>
-                  <li>5 User</li>
-                  <li>All UI components</li>
-                  <li>Lifetime access</li>
-                  <li>Free updates</li>
-                  <li>Use on 1 (one) project</li>
-                  <li>4 Months support</li>
+                  <li>Architecture review &amp; technical roadmap</li>
+                  <li>Focused engineering sprint with Web Core Unit</li>
+                  <li>Cloud-ready deployment plan on AWS or Azure</li>
+                  <li>Basic observability &amp; monitoring setup</li>
+                  <li>Knowledge handover session for your team</li>
+                  <li>Email support during engagement</li>
                 </ul>
               </div>
               <div class="ud-pricing-footer">
@@ -174,17 +174,17 @@
             >
               <span class="ud-popular-tag">POPULAR</span>
               <div class="ud-pricing-header">
-                <h3>STARTING FROM</h3>
-                <h4>$ 30.99/mo</h4>
+                <h3>DEDICATED POD</h3>
+                <h4>From $ 30.99/mo</h4>
               </div>
               <div class="ud-pricing-body">
                 <ul>
-                  <li>5 User</li>
-                  <li>All UI components</li>
-                  <li>Lifetime access</li>
-                  <li>Free updates</li>
-                  <li>Use on 1 (one) project</li>
-                  <li>4 Months support</li>
+                  <li>Cross-functional pod (Web, Cloud, AI)</li>
+                  <li>Weekly release cadence &amp; agile rituals</li>
+                  <li>CI/CD pipelines and infrastructure as code</li>
+                  <li>Performance, security, and scalability reviews</li>
+                  <li>Product &amp; architecture advisory from leads</li>
+                  <li>Priority support and incident response</li>
                 </ul>
               </div>
               <div class="ud-pricing-footer">
@@ -200,17 +200,17 @@
               data-wow-delay=".15s"
             >
               <div class="ud-pricing-header">
-                <h3>STARTING FROM</h3>
-                <h4>$ 70.99/mo</h4>
+                <h3>PLATFORM PARTNERSHIP</h3>
+                <h4>From $ 70.99/mo</h4>
               </div>
               <div class="ud-pricing-body">
                 <ul>
-                  <li>5 User</li>
-                  <li>All UI components</li>
-                  <li>Lifetime access</li>
-                  <li>Free updates</li>
-                  <li>Use on 1 (one) project</li>
-                  <li>4 Months support</li>
+                  <li>Long-term ownership of critical systems</li>
+                  <li>Architecture evolution and technical strategy</li>
+                  <li>AI &amp; automation roadmap for your business</li>
+                  <li>Mentorship for your internal engineering team</li>
+                  <li>Custom SLAs and reliability targets</li>
+                  <li>Executive-level engineering check-ins</li>
                 </ul>
               </div>
               <div class="ud-pricing-footer">
@@ -235,10 +235,10 @@
           <div class="col-lg-12">
             <div class="ud-section-title text-center mx-auto">
               <span>FAQ</span>
-              <h2>Any Questions? Answered</h2>
+              <h2>Questions About Working With Us</h2>
               <p>
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+                Explore how NexusBuilder engages with teams, structures projects, and supports you beyond the initial
+                launch.
               </p>
             </div>
           </div>
@@ -256,15 +256,13 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>How to use UIdeck?</span>
+                  <span>What types of projects does NexusBuilder take on?</span>
                 </button>
                 <div id="collapseOne" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.
+                    We focus on full-stack web platforms, cloud-native backends, and applied AI integrations. Typical
+                    work ranges from greenfield product builds to architecture modernization, observability, and
+                    automation for existing systems.
                   </div>
                 </div>
               </div>
@@ -279,15 +277,13 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>How to download icons from Lineicons?</span>
+                  <span>How do you structure pricing for engagements?</span>
                 </button>
                 <div id="collapseTwo" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.
+                    We start with a discovery call to understand your goals and constraints, then propose either a fixed
+                    sprint, a dedicated pod, or a longer-term platform partnership. Pricing is transparent, with clear
+                    deliverables and check-in milestones agreed up front.
                   </div>
                 </div>
               </div>
@@ -302,15 +298,13 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>Is GrayGrids part of UIdeck?</span>
+                  <span>Can you work alongside our existing engineering team?</span>
                 </button>
                 <div id="collapseThree" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.
+                    Yes. Many of our engagements involve pairing with in-house teams—bringing in our Web Core, Cloud,
+                    or AI units to co-own architecture decisions, unblock delivery, and upskill your engineers through
+                    real-world collaboration.
                   </div>
                 </div>
               </div>
@@ -327,15 +321,13 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>Can I use this template for commercial project?</span>
+                  <span>How long does a typical project last?</span>
                 </button>
                 <div id="collapseFour" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.
+                    Short discovery and implementation sprints can last 3–6 weeks, while larger platform or AI
+                    initiatives typically run for several months. We plan in clear phases so you can measure progress
+                    and adjust scope as needed.
                   </div>
                 </div>
               </div>
@@ -350,15 +342,13 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>Do you have plan releasing Play Pro?</span>
+                  <span>Do you support post-launch maintenance and mentoring?</span>
                 </button>
                 <div id="collapseFive" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.
+                    Absolutely. We can stay on as a long-term partner to maintain systems, evolve architecture, and
+                    mentor your internal engineers through code reviews, design sessions, and technical leadership
+                    coaching.
                   </div>
                 </div>
               </div>
@@ -373,15 +363,13 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>Where and how to host this template?</span>
+                  <span>How do we get started with NexusBuilder?</span>
                 </button>
                 <div id="collapseSix" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.
+                    Send us a brief overview of your product, current stack, and goals via our contact page. We’ll
+                    schedule a discovery call, outline options that fit your budget and timeline, and propose an
+                    engagement plan.
                   </div>
                 </div>
               </div>
@@ -409,11 +397,11 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
                 <a href="index.html" class="ud-footer-logo">
-                  <span class="fw-bold text-white startup-logo">Startup Template</span>
+                  <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
                 </a>
                 <p class="ud-widget-desc">
-                  We create digital experiences for brands and companies by
-                  using technology.
+                  NexusBuilder engineers scalable digital systems and cultivates the next generation of technology
+                  leaders through applied innovation and real-world mentorship.
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
