--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play | Open source Project by UIdeck</title>
+    <title>NexusBuilder | Page Not Found</title>
 
     <!--====== Favicon Icon ======-->
     <link
@@ -27,7 +27,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -130,19 +130,19 @@
           <div class="col-lg-12">
             <div class="ud-404-wrapper">
               <div class="ud-404-content">
-                <h2 class="ud-404-title">404 - We couldn't find that page.</h2>
+                <h2 class="ud-404-title">404 - We couldn’t find that route.</h2>
                 <h5 class="ud-404-subtitle">
-                  Maybe you can find what you need here?
+                  The page you’re looking for doesn’t exist, but these links can help you get back to building.
                 </h5>
                 <ul class="ud-404-links">
                   <li>
-                    <a href="javascript:void(0)">Home</a>
+                    <a href="index.html">Home</a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)">Support</a>
+                    <a href="about.html">About NexusBuilder</a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)">Latest News</a>
+                    <a href="contact.html">Contact &amp; Engagements</a>
                   </li>
                 </ul>
               </div>
@@ -170,11 +170,11 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
                 <a href="index.html" class="ud-footer-logo">
-                  <span class="fw-bold text-white startup-logo">Startup Template</span>
+                  <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
                 </a>
                 <p class="ud-widget-desc">
-                  We create digital experiences for brands and companies by
-                  using technology.
+                  NexusBuilder engineers scalable digital systems and cultivates the next generation of technology
+                  leaders through applied innovation and real-world mentorship.
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
