--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play | Open source Project by UIdeck</title>
+    <title>NexusBuilder | About & Engineering Units</title>
 
     <!--====== Favicon Icon ======-->
     <link
@@ -27,7 +27,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -129,21 +129,21 @@
         <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".2s">
           <div class="ud-about-content-wrapper">
             <div class="ud-about-content">
-              <span class="tag">About Us</span>
-              <h2>Brilliant Toolkit to Build Nextgen Website Faster.</h2>
+              <span class="tag">About NexusBuilder</span>
+              <h2>Engineering High-Scale Systems & Developing Future Tech Leaders.</h2>
               <p>
-                The main ‘thrust’ is to focus on educating attendees on how to
-                best protect highly vulnerable business applications with
-                interactive panel discussions and roundtables led by subject
-                matter experts.
+                NexusBuilder specializes in designing and delivering production-ready digital systems using modern
+                full-stack architecture, cloud-native deployments, and applied AI models. We help organizations move
+                from prototypes to resilient platforms through opinionated architecture, rigorous code quality, and
+                automation-first delivery practices.
               </p>
 
               <p>
-                The main ‘thrust’ is to focus on educating attendees on how to
-                best protect highly vulnerable business applications with
-                interactive panel.
+                Beyond shipping software, we invest heavily in people. Our engineering units mentor ambitious students
+                and developers through real-world projects, exposing them to scalable architecture, observability,
+                DevOps culture, and product thinking so they can grow into the next generation of tech leaders.
               </p>
-              <a href="javascript:void(0)" class="ud-main-btn">Learn More</a>
+              <a href="contact.html" class="ud-main-btn">Discuss a Project</a>
             </div>
           </div>
           <div class="ud-about-image">
@@ -160,11 +160,11 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-section-title mx-auto text-center">
-              <span>Our Team</span>
-              <h2>Meet The Team</h2>
+              <span>Our Engineering Units</span>
+              <h2>The Teams Behind NexusBuilder</h2>
               <p>
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+                Cross-functional units that collaborate on architecture, cloud, AI, and mentorship to deliver
+                production-grade systems and grow future engineers.
               </p>
             </div>
           </div>
@@ -190,8 +190,8 @@
                 />
               </div>
               <div class="ud-team-info">
-                <h5>Adveen Desuza</h5>
-                <h6>UI Designer</h6>
+                <h5>Web Core Unit</h5>
+                <h6>Full-Stack Engineering</h6>
               </div>
               <ul class="ud-team-socials">
                 <li>
@@ -231,8 +231,8 @@
                 />
               </div>
               <div class="ud-team-info">
-                <h5>Jezmin uniya</h5>
-                <h6>Product Designer</h6>
+                <h5>Cloud Architecture Unit</h5>
+                <h6>DevOps &amp; Infrastructure</h6>
               </div>
               <ul class="ud-team-socials">
                 <li>
@@ -272,8 +272,8 @@
                 />
               </div>
               <div class="ud-team-info">
-                <h5>Andrieo Gloree</h5>
-                <h6>App Developer</h6>
+                <h5>AI Innovation Lab</h5>
+                <h6>Applied AI &amp; Automation</h6>
               </div>
               <ul class="ud-team-socials">
                 <li>
@@ -313,8 +313,8 @@
                 />
               </div>
               <div class="ud-team-info">
-                <h5>Jackie Sanders</h5>
-                <h6>Content Writer</h6>
+                <h5>Mentorship Division</h5>
+                <h6>Tech Leadership &amp; Growth</h6>
               </div>
               <ul class="ud-team-socials">
                 <li>
@@ -357,11 +357,11 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
                 <a href="index.html" class="ud-footer-logo">
-                  <span class="fw-bold text-white startup-logo">Startup Template</span>
+                  <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
                 </a>
                 <p class="ud-widget-desc">
-                  We create digital experiences for brands and companies by
-                  using technology.
+                  NexusBuilder engineers scalable digital systems and cultivates the next generation of technology
+                  leaders through applied innovation and real-world mentorship.
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
