--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play | Open source Project by UIdeck</title>
+    <title>NexusBuilder | Contact</title>
 
     <!--====== Favicon Icon ======-->
     <link
@@ -27,7 +27,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -115,7 +115,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-banner-content">
-              <h1>Contact Page</h1>
+              <h1>Contact NexusBuilder</h1>
             </div>
           </div>
         </div>
@@ -132,8 +132,8 @@
               <div class="ud-contact-title">
                 <span>CONTACT US</span>
                 <h2>
-                  Let’s talk about <br />
-                  Love to hear from you!
+                  Let’s talk about your next <br />
+                  platform, cloud, or AI initiative.
                 </h2>
               </div>
               <div class="ud-contact-info-wrapper">
@@ -143,7 +143,7 @@
                   </div>
                   <div class="ud-info-meta">
                     <h5>Our Location</h5>
-                    <p>401 Broadway, 24th Floor, Orchard Cloud View, London</p>
+                    <p>Bangalore, India</p>
                   </div>
                 </div>
                 <div class="ud-single-info">
@@ -152,8 +152,8 @@
                   </div>
                   <div class="ud-info-meta">
                     <h5>How Can We Help?</h5>
-                    <p>info@yourdomain.com</p>
-                    <p>contact@yourdomain.com</p>
+                    <p>hr.nexusbuilder.software@gmail.com</p>
+                    <p>Share a brief about your product, current stack, and goals.</p>
                   </div>
                 </div>
               </div>
@@ -179,7 +179,7 @@
                   <input
                     type="email"
                     name="email"
-                    placeholder="example@yourmail.com"
+                    placeholder="you@company.com"
                   />
                 </div>
                 <div class="ud-form-group">
@@ -187,7 +187,7 @@
                   <input
                     type="text"
                     name="phone"
-                    placeholder="+885 1254 5211 552"
+                    placeholder="+91 933 554 2827"
                   />
                 </div>
                 <div class="ud-form-group">
@@ -228,11 +228,11 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
                 <a href="index.html" class="ud-footer-logo">
-                  <span class="fw-bold text-white startup-logo">Startup Template</span>
+                  <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
                 </a>
                 <p class="ud-widget-desc">
-                  We create digital experiences for brands and companies by
-                  using technology.
+                  NexusBuilder engineers scalable digital systems and cultivates the next generation of technology
+                  leaders through applied innovation and real-world mentorship.
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
