--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play | Open source Project by UIdeck</title>
+    <title>NexusBuilder | Sign In</title>
 
     <!--====== Favicon Icon ======-->
     <link
@@ -27,7 +27,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -115,7 +115,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-banner-content">
-              <h1>Login Page</h1>
+              <h1>NexusBuilder Portal</h1>
             </div>
           </div>
         </div>
@@ -204,11 +204,11 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
                 <a href="index.html" class="ud-footer-logo">
-                  <span class="fw-bold text-white startup-logo">Startup Template</span>
+                  <span class="fw-bold text-white startup-logo">NEXUSBUILDER</span>
                 </a>
                 <p class="ud-widget-desc">
-                  We create digital experiences for brands and companies by
-                  using technology.
+                  NexusBuilder engineers scalable digital systems and cultivates the next generation of technology
+                  leaders through applied innovation and real-world mentorship.
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
