did changed favicon.ico

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
   <!--====== Favicon Icon ======-->
-  <link rel="shortcut icon" href="assets/images/favicon.svg" type="image/svg" />
+  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/svg" />
 
   <!-- ===== All CSS files ===== -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
