--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
-      href="assets/images/favicon.svg"
-      type="image/svg"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"
     />
 
     <!-- ===== All CSS files ===== -->
@@ -98,9 +98,9 @@
                 <a href="login.html" class="ud-main-btn ud-login-btn">
                   Sign In
                 </a>
-                <a class="ud-main-btn ud-white-btn" href="javascript:void(0)">
+                <!-- <a class="ud-main-btn ud-white-btn" href="javascript:void(0)">
                   Sign Up
-                </a>
+                </a> -->
               </div>
             </nav>
           </div>
