--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,8 @@
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
-      href="assets/images/favicon.svg"
-      type="image/svg"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"
     />
 
     <!-- ===== All CSS files ===== -->
